--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = lasertram
-version = 0.0.4-alpha
+version = 0.0.5
 author = Jordan Lubbers
 author_email = jelubber@gmail.com
 description = For processing LA-ICP-MS data
