--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = lasertram
-version = 0.0.7
+version = 0.0.8
 author = Jordan Lubbers
 author_email = jelubber@gmail.com
 description = For processing LA-ICP-MS data
@@ -17,3 +17,12 @@ classifiers =
 packages = find:
 python_requires = >=3.10
 include_package_data = True
+install_requires = 
+    mendeleev >= 0.14.0
+    numpy >= 1.25.2
+    pandas >= 2.0.3
+    scipy >= 1.11.1
+    statsmodels >= 0.14.0
+    openpyxl >= 3.0.0
+
+
