--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,6 +15,10 @@ markdown_extensions:
   - pymdownx.arithmatex:
       generic: true
   - tables
+  - attr_list
+  - pymdownx.emoji:
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
 
 
 
