--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -48,6 +48,7 @@ jobs:
       name: pypi
       url: https://pypi.org/p/<package-name>  # Replace <package-name> with your PyPI project name
     permissions:
+      contents: write
       id-token: write  # IMPORTANT: mandatory for trusted publishing
 
     steps:
