--- a/setup.cfg
+++ b/setup.cfg
@@ -9,9 +9,14 @@ long_description_content_type = text/markdown
 url = https://github.com/jlubbersgeo/lasertram
 classifiers = 
     Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
+    Programming Language :: Python :: 3.12
     License :: OSI Approved :: MIT License
     Operating System :: OS Independent
     Development Status :: 4 - Beta
+    Topic :: Scientific/Engineering
+    
 
 [options]
 packages = find:
