--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = lasertram
-version = 0.1.0
+version = attr:lasertram.__version__
 author = Jordan Lubbers
 author_email = jelubber@gmail.com
 description = For processing LA-ICP-MS data
