--- a/.pypirc
+++ b/.pypirc
@@ -3,6 +3,6 @@ index-servers =
     gitlab
 
 [gitlab]
-repository = https://code.usgs.gov/jlubbers/lasertram
+repository = https://code.usgs.gov/api/v4/projects/lasertram/packages/pypi
 username = lasertram_deploy
 password = gldt-yvc_6yowRi7kL8DksfpN
