--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "scipy >= 1.11.1",
     "statsmodels >= 0.14.0",
     "openpyxl >= 3.0.0",
+    "matplotlib"
 ]
 classifiers = [
     # How mature is this project? Common values are
